# Fyyr

./: 2.7.3  README.md  app.py  config.py  db.py  forms.py  models.py  pyproject.toml  requirements.txt
migrations/versions/: 0fbbdd1660d7_.py  53ab7fcda844_.py  d8af2da9eb3f_.py
templates/forms/: edit_artist.html  edit_venue.html  new_artist.html  new_venue.html
templates/pages/: show_artist.html  show_venue.html
