[tool.poetry]
name = "fyyur"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Babel = "^2.9.0"
python-dateutil = "2.6.0"
Flask-Moment = "^0.11.0"
Flask-WTF = "^0.14.3"
SQLAlchemy = "^1.3.22"
postgres = "^3.0.0"
Flask = "^1.1.2"
Flask-Migrate = "^2.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
